--- a/index.html
+++ b/index.html
@@ -75,29 +75,17 @@
       <div class="main-section__content">
         <div class="about__info">
           <div class="about__main-info">
-            <p class="text-primary about__text-primary">
-              <span>
-                🌍 Fullstack Developer Javascript at <a class="link" href="https://www.karbon.earth/">Karbon.</a> 
-              </span>
-              <span>
-                🌱 Working on Environmental impact analysis.
-              </span>
-              <span>
-                ⌨️ Proficient in HTML, CSS, and JavaScript fundamentals.
-              </span>
-              <span>
-                ⚛️ Adheres to best practices in React.
-              </span>
-              <span>
-                🌐 Experience in GraphQL API development.
-              </span>
-              <span>
-                🖥️ Integration and Continuous Development (CI/CD)
-              </span>
-              <span>
-                🎨 Attentive to web design and user experience.
-              </span>
-            </p>
+            <ul class="text-primary about__text-primary">
+              <li class="">🚘 Fullstack Developer at <a class="link" href="https://www.auto-ici.fr/">auto-ici.fr</a></li>
+            </br>
+              <li>⌨️ Proficient in HTML, CSS, and JavaScript fundamentals.</li>
+            </br>
+              <li>⚛️ Adheres to best practices in React.</li>
+            </br>
+              <li>🌐 Experience in GraphQL API development.</li>
+            </br>
+              <li>🖥️ Integration and Continuous Development (CI/CD)</li>
+            </ul>
           </div>
           <div class="about__skill-info">
             <ul class="about__skills">
@@ -112,8 +100,8 @@
               <li class="about__skill">graphql</li>
               <li class="about__skill">CI/CD</li>
               <li class="about__skill">TDD</li>
-              <li class="about__skill">GITHUB</li>
-              <li class="about__skill">AGILITY</li>
+              <li class="about__skill">GIT</li>
+              <li class="about__skill">Docker</li>
             </ul>
           </div>
         </div>
@@ -153,19 +141,43 @@
       <!-- GALLERY -->
       <div class="main-section__content">
         <div class="projects__list">
+          <div class="projects__list-item projects__list-item--inv">
+            <div class="projects__list-item-details">
+              <div class="projects__list-item-img-cont">
+                <img src="./assets/autoici.png" alt="auto-ici" class="projects__list-item-img" />
+              </div>
+              <h3 class="heading-tertiary projects__list-item-heading-tertiary">
+                <span>🔗</span>
+                <a href="https://www.auto-ici.fr/" class='link'>Auto-ici</a>
+              </h3>
+              <p class="text-primary projects__list-item-text-primary">
+                <span class="date-project">04/2024</span>
+                <span>
+                  Car dealership near Lille in France
+                </span>
+                <span class="logo-devicon">
+                  <i class="devicon-php-plain colored"></i>
+                  <i class="devicon-symfony-original colored"></i>
+                  <i class="devicon-angularjs-plain colored"></i>
+                  <i class="devicon-nodejs-plain colored"></i>
+                  <i class="devicon-tortoisegit-plain colored"></i>
+                </span>
+              </p>
+            </div>
+          </div>
 
           <!-- KARBON -->
           <div class="projects__list-item">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
-                <img src="./assets/karbon.png" alt="Project Image" class="projects__list-item-img" />
+                <img src="./assets/karbon.png" alt="Karbon" class="projects__list-item-img" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
                 <span>🔗</span>
                 <a href="https://editor.karbon.earth/" class='link'>Karbon</a>
               </h3>
               <p class="text-primary projects__list-item-text-primary">
-                <span class="date-project">2023 - 2024</span>
+                <span class="date-project">03/2023 - 03/2024</span>
                 <span>
                   Tool for measuring the environmental impact of food products.
                 </span>
@@ -174,6 +186,7 @@
                   <i class="devicon-react-original colored"></i>
                   <i class="devicon-nodejs-plain colored"></i>
                   <i class="devicon-graphql-plain colored"></i>
+                  <i class="devicon-git-plain-wordmark colored"></i>
                 </span>
               </p>
             </div>
@@ -183,21 +196,21 @@
           <div class="projects__list-item projects__list-item--inv">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
-                <img src="./assets/ambufolio.png" alt="Project Image" class="projects__list-item-img" />
+                <img src="./assets/ambufolio.png" alt="ambulance" class="projects__list-item-img" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
-                Ambu-booking
+                Ambuzen
               </h3>
               <p class="text-primary projects__list-item-text-primary">
-                <span class="date-project">Work in Progress ...</span>
-                <span>
-                  Online ambulance booking application.
-                </span>
+                <span class="date-project">Still in Progress ...</span>
+                <span>Online ambulance booking application.</span>
+                <span>Side personal project.</span>
                 <span class="logo-devicon">
                   <i class="devicon-typescript-plain colored"></i>
                   <i class="devicon-react-original colored"></i>
                   <i class="devicon-nodejs-plain colored"></i>
                   <i class="devicon-graphql-plain colored"></i>
+                  <i class="devicon-git-plain-wordmark colored"></i>
                 </span>
               </p>
             </div>
@@ -207,7 +220,7 @@
           <div class="projects__list-item">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
-                <img src="./assets/contact.png" alt="Project Image" class="projects__list-item-img" />
+                <img src="./assets/contact.png" alt="Contact-form" class="projects__list-item-img" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
                 <span>🔗</span>
@@ -215,15 +228,13 @@
               </h3>
               <p class="text-primary projects__list-item-text-primary">
                 <span class="date-project"> June 2023 </span>
-                <span>
-                  Receive mails from your clients easily.
-                  <br />
-                </span>
-                <br />
+                <span>Receive mails safely.</span>
+                <span>Setup and instalation on my github.</span>
                 <span class="logo-devicon">
                   <i class="devicon-javascript-plain colored"></i>
                   <i class="devicon-nextjs-plain-wordmark colored"></i>
                   <i class="devicon-tailwindcss-plain colored"></i>
+                  <i class="devicon-git-plain-wordmark colored"></i>
                 </span>
               </p>
             </div>
@@ -233,7 +244,7 @@
           <div class="projects__list-item projects__list-item--inv">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
-                <img src="./assets/todofolio.png" alt="Project Image" class="projects__list-item-img" />
+                <img src="./assets/todofolio.png" alt="TodoList" class="projects__list-item-img" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
                 TodoList
@@ -248,6 +259,7 @@
                 <span class="logo-devicon"><i class="devicon-typescript-plain colored"></i>
                   <i class="devicon-nextjs-plain-wordmark colored"></i>
                   <i class="devicon-redux-original colored"></i>
+                  <i class="devicon-git-plain-wordmark colored"></i>
               </p>
             </div>
           </div>
@@ -256,7 +268,7 @@
           <div class="projects__list-item projects__list-itemv">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
-                <img src="./assets/wimfolio.png" alt="Project Image" class="projects__list-item-img-mob" />
+                <img src="./assets/wimfolio.png" alt="Work in Music" class="projects__list-item-img-mob" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
                 Work in Music
@@ -269,6 +281,7 @@
                 <span class="logo-devicon"><i class="devicon-javascript-plain colored"></i>
                   <i class="devicon-react-original colored"></i>
                   <i class="devicon-nodejs-plain colored"></i>
+                  <i class="devicon-git-plain-wordmark colored"></i>
                 </span>
               </p>
             </div>
@@ -278,7 +291,7 @@
           <div class="projects__list-item projects__list-item--inv">
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
-                <img src="./assets/bigbillfolio.png" alt="Project Image" class="projects__list-item-img" />
+                <img src="./assets/bigbillfolio.png" alt="BigBill" class="projects__list-item-img" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
                 BigBill
@@ -292,12 +305,13 @@
                   Invest your money to get rich while protecting the planet
                 </span>
                 <br />
-                <span class="logo-devicon"><i class="devicon-javascript-plain colored"></i>
-                  <i class="devicon-react-original colored"></i></span>
+                <span class="logo-devicon">
+                  <i class="devicon-javascript-plain colored"></i>
+                  <i class="devicon-react-original colored"></i>
+                  <i class="devicon-git-plain-wordmark colored"></i></span>
               </p>
             </div>
           </div>
-        </div>
       </div>
   </section>
 
